--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Praneeth Devarasetty</title>
-    <link rel="stylesheet" href="/praneeth622/My-Cv2/css/styles.css">
+    <link rel="stylesheet" href="/My-Cv2/css/styles.css">
     <link rel="icon" href="/css/favicon_io/apple-touch-icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 </head>
