--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="/images/cloud.png" alt="Clouds">
+        <img class="top-cloud" src="My-Cv2/images/cloud.png" alt="Clouds">
         <h1 class="heading">Praneeth Devarasetty</h1>
         <h2 class="heading1">Student of IIITDM Kancheepuram</h2>
         <img class="bottom-cloud" src="/images/cloud.png" alt="Clouds">
@@ -20,7 +20,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img src="/images/Praneeth Photo.png" alt="Praneeth">
+          <img src="My-Cv2/images/Praneeth Photo.png" alt="Praneeth">
           <h2>Hello.</h2>
           <p class="intro">I started learning to code when I was 15 years old. I Started exploring new things when I was 15</p>
         </div>
@@ -28,7 +28,7 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row" class="computer1">
-            <img class="computer" src="/images/computer.png" alt="computer image">
+            <img class="computer" src="/My-Cv2/images/computer.png" alt="computer image">
             <h3>Web Development</h3>
             <p>I started Learning Web development in my 1st semister as I was very curious </p>
           </div>
