--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img class="top-cloud" src="My-Cv2/images/cloud.png" alt="Clouds">
         <h1 class="heading">Praneeth Devarasetty</h1>
         <h2 class="heading1">Student of IIITDM Kancheepuram</h2>
-        <img class="bottom-cloud" src="/images/cloud.png" alt="Clouds">
+        <img class="bottom-cloud" src="/My-Cv2/images/cloud.png" alt="Clouds">
         <img src="/images/mountain.png" alt="Mountains">
         
     </div>
