--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <h1 class="heading">Praneeth Devarasetty</h1>
         <h2 class="heading1">Student of IIITDM Kancheepuram</h2>
         <img class="bottom-cloud" src="/My-Cv2/images/cloud.png" alt="Clouds">
-        <img src="/images/mountain.png" alt="Mountains">
+        <img src="/My-Cv2/images/mountain.png" alt="Mountains">
         
     </div>
     <div class="middle-container">
         <div class="profile">
-          <img src="My-Cv2/images/Praneeth Photo.png" alt="Praneeth">
+          <img src="/My-Cv2/images/Praneeth Photo.png" alt="Praneeth">
           <h2>Hello.</h2>
           <p class="intro">I started learning to code when I was 15 years old. I Started exploring new things when I was 15</p>
         </div>
@@ -33,7 +33,7 @@
             <p>I started Learning Web development in my 1st semister as I was very curious </p>
           </div>
           <div  class="skill-row">
-            <img class="chillies" src="/images/chillies.png" alt="computer">
+            <img class="chillies" src="/My-Cv2/images/chillies.png" alt="computer">
             <h3 class="h31" >Python And Django</h3>
             <p>I started Exploring my Intrest in various feilds and at 11th I started learning my first Programming language Python and started building projects django framework  </p>
           </div>
