--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="My-Cv2/images/cloud.png" alt="Clouds">
+        <img class="top-cloud" src="/My-Cv2/images/cloud.png" alt="Clouds">
         <h1 class="heading">Praneeth Devarasetty</h1>
         <h2 class="heading1">Student of IIITDM Kancheepuram</h2>
         <img class="bottom-cloud" src="/My-Cv2/images/cloud.png" alt="Clouds">
