--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="/My-Cv2/images/cloud.png" alt="Clouds">
+        <img class="top-cloud" src="/My-Cv2/images/cloud.png" alt="Clouds1">
         <h1 class="heading">Praneeth Devarasetty</h1>
         <h2 class="heading1">Student of IIITDM Kancheepuram</h2>
-        <img class="bottom-cloud" src="/My-Cv2/images/cloud.png" alt="Clouds">
+        <img class="bottom-cloud" src="/My-Cv2/images/cloud.png" alt="Clouds2">
         <img src="/My-Cv2/images/mountain.png" alt="Mountains">
         
     </div>
